--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,4 +5,7 @@
 @import 'base/globales';
 
 @import 'layout/UI';
+@import 'layout/reset';
 @import 'layout/tabs';
+@import 'layout/servicios';
+@import 'layout/paginacion';
