--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -13,8 +13,9 @@ body {
     .imagen {
         height: 30rem;
         background-image: url(../img/1.jpg);
-        background-size: cove;
+        background-size: cover;
         background-position: center center;
+        background-repeat: no-repeat;
         
         @include tablet {
             height: auto;
@@ -27,4 +28,13 @@ body {
     width: 95%;
     margin: 0 auto;
     padding-top: $separacion / 2;
+
+    .seccion {
+        display: none;
+        margin-top: $separacion / 1.85;
+    }
+}
+
+.mostrar-seccion {
+    display: block!important;
 }
